# bo_corr_plot

./: .gitignore  LICENSE  README.md  pyproject.toml
bo_corr_plot/: __init__.py  __main__.py  bo_controller.py  process.py
bo_corr_plot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
bo_corr_plot/core/: __init__.py  acquisition.py  bo.py  process.py
bo_corr_plot/data/: __init__.py  mock_data.py
bo_corr_plot/epics/: __init__.py  epics_interface.py
bo_corr_plot/gui/: __init__.py  components.py  dialogs.py  param_widget.py  pyqtgraph_widget.py  ui.py
