[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bo_corr_plot"
version = "1.0.0"
description = "A Bayesian Optimization GUI for EPICS or mock data visualization."
readme = "README.md"
authors = [{ name = "Aditya", email = "aaditya@slac.stanford.edu" }]
license = { file = "LICENSE" }
dependencies = [
    "numpy>=1.19.5",
    "scipy>=1.5.4",
    "scikit-learn>=0.24.2",
    "pyqt5>=5.15.4",
    "pyqtgraph>=0.12.3",
    "qdarkstyle>=3.0.3",
    "pyepics>=3.5.1"
]
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
bae = "bo_corr_plot.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bo_corr_plot*"]

[tool.setuptools]
license-files = ["LICENSE"]